--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Я впервые разместил свой код на удалённом репозитории</h1>
     <h2>Hello world!</h2>
+    <p>Изменения, которые позже удалимgit</p>
 </body>
 </html>
